--- a/Relatório de Ocorrência Patrimonial.html
+++ b/Relatório de Ocorrência Patrimonial.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Relatório de Atendimento de Ocorrência</title>
+  <title>Relatório de Ocorrência Patrimonial</title>
   <link rel="manifest" href="manifest.json">
 <link rel="icon" href="icon-192.png">
   <meta name="theme-color" content="#ffffff">
