--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       margin-bottom: 20px;
     }
     .equipe {
-      margin-top: 4px;
+      margin-top: 6px;
       background-color: #a4c4d2;
       padding: 3px;
       border-radius: 4px;
@@ -184,7 +184,7 @@
 
 <canvas id="assinatura" width="690" height="160" style="border:1px solid #000;"></canvas><br>
 </div>
-  <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados,para controle de atendimentos de ACIDENTES/OCORRÊNCIA da SETRAN,e não substitui o registro realizado por outros órgãos.</p>
+  <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
    <div style="position: relative;">
