--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       max-width: 900px;
       margin: auto;
       color: black;
-      background-color: #0088FF;
+      background-color: #20B2AA;
     }
     h1 {
       text-align: center;
-      font-size: 22px;
-      margin-top: 1px;
+      font-size: 23px;
+      margin-top: 2px;
       color: blue;
     }
     h2 {
@@ -155,9 +155,9 @@
   <label>1 - NÚMERO: <input type="text" name="numero" style="width: 70px;"> /2025</label>
 
   <div class="linha-horizontal">
-    <label>Data: <input type="date" name="data"></label>
-    <label>Hora Início: <input type="time" name="hora_inicio"></label>
-    <label>Hora Término: <input type="time" name="hora_termino"></label>
+    <label>DATA: <input type="date" name="data"></label>
+    <label>HORA INÍCIO: <input type="time" name="hora_inicio"></label>
+    <label>HORA TÉRMINO: <input type="time" name="hora_termino"></label>
   </div>
   <div class="linha-horizontal">
   <label>2 - SOLICITANTE: <input type="text" name="solicitante"></label>
@@ -167,7 +167,7 @@
   <label>SITUAÇÃO INFORMADA: <textarea name="situacao"></textarea></label>
 
   <label>3 - RELATÓRIO DO ATENDIMENTO E AÇÕES REALIZADAS: <textarea name="relatorio"></textarea></label>
-  <label>- Número de pessoas atendidas: <input type="text" name="pessoas_atendidas"></label>
+  <label>- NÚMERO DE PESSOAS ATENDIDAS: <input type="text" name="pessoas_atendidas"></label>
 
   <div class="equipe">
   <label>4 - EQUIPE:</label>
@@ -180,9 +180,9 @@
     <label>Nome Agente 4: <input type="text" name="assinatura4"></label>
   </div>
   <label>VTR(s): <input type="text" name="vtr"></label>
-<label>Assinaturas (Agentes 1, 2, 3 e 4):</label>
+<label>ASSINATURAS (Agentes 1, 2, 3 e 4):</label>
 
-<canvas id="assinatura" width="690" height="160" style="border:1px solid #000;"></canvas><br>
+<canvas id="assinatura" width="690" height="170" style="border:1px solid #000;"></canvas><br>
 </div>
   <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
 
