--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       border-radius: 4px;
     }
     textarea {
-      height: 120px;
+      height: 130px;
       color: blue;
       font-family: Arial, sans-serif;
       font-size: 14px;
@@ -90,7 +90,7 @@
       padding: 10px 15px;
       font-weight: bold;
       font-size: 18px;
-      background-color: #D6FFFF;
+      background-color: #dbead5;
       color: blue;
       border-radius: 10px;
       cursor: pointer;
@@ -119,7 +119,7 @@
     }
     #pdf-content {
       background-color: #dbead5;
-      padding: 15px 10px;
+      padding: 22px 10px;
       border-radius: 4px;
     }
     canvas#assinatura {
