--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     }
     .equipe {
       margin-top: 6px;
-      background-color: #a4c4d2;
+      background-color: lightblue;
       padding: 3px;
       border-radius: 4px;
       
