--- a/index.html
+++ b/index.html
@@ -282,11 +282,8 @@ function gerarPDF() {
     margin: [5, 5, 5, 5],
     filename: gerarNomePDFComDataHora(),
     image: { type: 'jpeg', quality: 0.98 },
-    html2canvas: { scale: 3, useCORS: true, scrollY: 0,
-      windowWidth: document.documentElement.scrollWidth,
-      windowHeight: document.documentElement.scrollHeight
-                 },
-    pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },
+    html2canvas: { scale: 3, useCORS: true, scrollY: 0 },
+    
     jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
     
   }).from(clone).save().then(() => {
