--- a/index.html
+++ b/index.html
@@ -278,15 +278,23 @@ function gerarPDF() {
   container.style.left = '-9999px';
   container.appendChild(clone);
   document.body.appendChild(container);
-  html2pdf().set({
+  
+  const opt = {
     margin: [5, 5, 5, 5],
     filename: gerarNomePDFComDataHora(),
     image: { type: 'jpeg', quality: 0.98 },
-    html2canvas: { scale: 3, useCORS: true, scrollY: 0 },
+    html2canvas: { 
+      scale: 3,
+      useCORS: true,
+      scrollY: 0,
+      windowWidth: document.documentElement.scrollWidth,
+      windowHeight: document.documentElement.scrollHeight
+    },
+pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },
     
     jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-    
-  }).from(clone).save().then(() => {
+  };  
+  html2pdf().set(opt).from(clone).save().then(() => {
     document.body.removeChild(container);
   });
 }
