--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       border-radius: 4px;
     }
     textarea {
-      height: 155px;
+      height: auto;
       color: blue;
       font-family: Arial, sans-serif;
       font-size: 14px;
@@ -169,7 +169,7 @@
   <label>3 - RELATÓRIO DO ATENDIMENTO E AÇÕES REALIZADAS: <textarea name="relatorio"></textarea></label>
   <label>- NÚMERO DE PESSOAS ATENDIDAS: <input type="text" name="pessoas_atendidas"></label>
 
-  
+ <div class="equipe"> 
   <label>4 - EQUIPE:</label>
   <div class="linha-horizontal-2">
     <label>Agente 1 (Responsável pelo preenchimento): <input type="text" name="responsavel"></label>
@@ -180,10 +180,11 @@
     <label>Nome Agente 4: <input type="text" name="assinatura4"></label>
   </div>
   <label>VTR(s): <input type="text" name="vtr"></label>
+ </div>
+<div class="assinatura">    
 <label>ASSINATURAS (Agentes 1, 2, 3 e 4):</label>
-
 <canvas id="assinatura" width="690" height="170" style="border:1px solid #000;"></canvas><br>
-
+ </div>
   <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
