--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       border-radius: 4px;
     }
     textarea {
-      height: auto;
+      height: 177px;
       color: blue;
       font-family: Arial, sans-serif;
       font-size: 14px;
@@ -132,7 +132,7 @@
       margin-bottom: 15px;
     }
     .equipe {
-      margin-top: 3px;
+      margin-top: 5px 3px;
       background-color: lightblue;
       padding: 3px;
       border-radius: 4px;
@@ -184,7 +184,7 @@
 <div class="assinatura">    
 <label>ASSINATURAS (Agentes 1, 2, 3 e 4):</label>
 <canvas id="assinatura" width="690" height="170" style="border:1px solid #000;"></canvas><br>
- </div>
+</div>
   <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
