--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
       margin-bottom: 15px;
     }
     .equipe {
-      margin-top: 5px 3px;
+      margin-top: 3px;
       background-color: lightblue;
-      padding: 3px;
+      padding: 5px 3px;
       border-radius: 4px;
       
     }
