--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <label>ASSINATURAS (Agentes 1, 2, 3 e 4):</label>
 <canvas id="assinatura" width="690" height="170" style="border:1px solid #000;"></canvas><br>
 </div>
-  <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
+  <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de OCORRÊNCIA da GUARDA PATRIMONIAL, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
    <div style="position: relative;">
