--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
     input[type="time"],
     textarea {
       width: 100%;
-      padding: 4px;
+      padding: 5px;
       font-weight: bold;
       font-size: 14px;
       color: blue;
       border-radius: 4px;
     }
     textarea {
-      height: 177px;
+      height: auto;
+      min-height: 80px;
       color: blue;
       font-family: Arial, sans-serif;
       font-size: 14px;
