--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       font-family: Arial, sans-serif;
       padding: 15px;
-      font-size: 15px;
+      font-size: 16px;
       font-weight: bold;
       max-width: 900px;
       margin: auto;
@@ -56,7 +56,7 @@
       display: flex;
       gap: 10px;
       flex-wrap: wrap;
-      margin-top: 8px;
+      margin-top: 3px;
     }
     .linha-horizontal label,
     .linha-horizontal-2 label,
@@ -66,7 +66,7 @@
     }
     label {
       display: block;
-      margin-top: 8px;
+      margin-top: 7px;
     }
     input[type="text"],
     input[type="date"],
@@ -75,13 +75,13 @@
       width: 100%;
       padding: 5px;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 15px;
       color: blue;
       border-radius: 4px;
     }
     textarea {
       height: auto;
-      min-height: 160px;
+      min-height: 180px;
       color: blue;
       font-family: Arial, sans-serif;
       font-size: 14px;
@@ -112,7 +112,7 @@
     }
     p {
       color: red;
-      margin-top: 2px;
+      margin-top: 1px;
       font-size: 11px;
       text-align: center;
       background-color: yellow;
@@ -143,7 +143,7 @@
   </style>
 </head>
 <body>
-<label for="nome" style="font-size: 6px;">© 2025 Leonildo.Neumann</label>
+<label for="nome" style="font-size: 8px;">© 2025 Leonildo.Neumann</label>
   <div id="pdf-content">
 <div class="logo-container">
   <img src="logo-prefeitura.png" crossorigin="anonymous" alt="Prefeitura" class="logo">
@@ -250,12 +250,18 @@ function prepararAssinatura(clone) {
   }
 }
 
-function gerarNomePDFComDataHora() {
+function getNumeroRelatorio() {
+  const numero = document.querySelector('input[name="numero"]').value.trim();
   const agora = new Date();
   const data = agora.toLocaleDateString('pt-BR').split('/').reverse().join('-');
   const hora = agora.toTimeString().split(' ')[0].replace(/:/g, '-');
-  return `relatorio_${data}_${hora}.pdf`;
+  if (numero) {
+  return `relatorio_${numero}_${data}_${hora}.pdf`;
+} else {
+return `relatorio_${data}_${hora}.pdf`; // nome padrão caso esteja vazio
+  }
 }
+
 
 function gerarPDF() {
   const original = document.getElementById('pdf-content');
@@ -283,7 +289,7 @@ function gerarPDF() {
   
   const opt = {
     margin: [5, 5, 5, 5],
-    filename: gerarNomePDFComDataHora(),
+    filename: getNumeroRelatorio(),
     image: { type: 'jpeg', quality: 0.98 },
     html2canvas: { 
       scale: 3,
@@ -293,7 +299,6 @@ function gerarPDF() {
       windowHeight: document.documentElement.scrollHeight
     },
 pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },
-    
     jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
   };  
   html2pdf().set(opt).from(clone).save().then(() => {
@@ -330,7 +335,7 @@ async function compartilharPDF() {
 
   const opt = {
     margin: [5, 5, 5, 5],
-    filename: gerarNomePDFComDataHora(),
+    filename: getNumeroRelatorio(),
     image: { type: 'jpeg', quality: 0.98 },
     html2canvas: { 
       scale: 3,
@@ -345,7 +350,7 @@ async function compartilharPDF() {
 
   const blob = await html2pdf().set(opt).from(clone).outputPdf('blob');
 
-  const file = new File([blob], gerarNomePDFComDataHora(), { type: 'application/pdf' });
+  const file = new File([blob], getNumeroRelatorio(), { type: 'application/pdf' });
 
   if (navigator.canShare && navigator.canShare({ files: [file] })) {
     try {
