Update termos de uso.html

--- a/termos de uso.html
+++ b/termos de uso.html
@@ -34,7 +34,7 @@
 <body>
   <h1>Termos de Uso</h1>
 
-  <p>Bem-vindo ao aplicativo <strong>Relatório de Atendimento de Ocorrência - SETRAN</strong>. 
+  <p>Bem-vindo ao aplicativo <strong>Relatório de Ocorrência Patrimonial</strong>. 
   O uso deste aplicativo implica na aceitação integral destes Termos de Uso. 
   Leia com atenção antes de utilizá-lo.</p>
 
