--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
 <button type="button" class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
 <button type="button" class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button type="button" class="btn" onclick="gerarPDF()">Baixar PDF</button>
+<div style="text-align:center; margin-top:10px; margin-bottom: 15px; text-decoration: none;">
+  <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
+</div>
+
 
 <script>
 const canvas = document.getElementById('assinatura');
