--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 <button type="button" class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
 <button type="button" class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button type="button" class="btn" onclick="gerarPDF()">Baixar PDF</button>
-<div style="text-align:center; margin-top:10px; margin-bottom: 15px; text-decoration: none;">
+<div style="text-align:center; margin-top:10px; margin-bottom: 15px; background-color: #dbead5; padding: 10px 15px;">
   <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
 </div>
 
