Update termos de uso.html

--- a/termos de uso.html
+++ b/termos de uso.html
@@ -39,7 +39,7 @@
   Leia com atenção antes de utilizá-lo.</p>
 
   <h2>1. Finalidade do Aplicativo</h2>
-  <p>Este aplicativo é uma ferramenta <strong>gratuita</strong> para auxiliar no preenchimento e registro de ocorrências da SETRAN. 
+  <p>Este aplicativo é uma ferramenta <strong>gratuita</strong> para auxiliar no preenchimento e registro de ocorrências da Guarda Patrimonial. 
   O documento gerado tem caráter informativo e não substitui registros oficiais feitos por outros órgãos competentes.</p>
 
   <h2>2. Uso Permitido</h2>
