--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Relatório de Atendimento de Ocorrência</title>
   <link rel="manifest" href="manifest.json">
-<link rel="icon" href="icon-192.png">
+<link rel="icon" href="icon2-192.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -146,7 +146,7 @@
 <label for="nome" style="font-size: 6px;">© 2025 Leonildo.Neumann</label>
   <div id="pdf-content">
 <div class="logo-container">
-  <img src="logo-prefeitura.png" crossorigin="anonymous" alt="Prefeitura" class="logo">
+  <img src="logo-smdsm.png" crossorigin="anonymous" alt="Prefeitura" class="logo">
   <img src="logo-setran.png" crossorigin="anonymous" alt="Setran" class="logo">
   <img src="logo-guarda.png" crossorigin="anonymous" alt="Guarda" class="logo">
 </div>
