--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <h1><u>GUARDA PATRIMONIAL</u></h1>
   <h2>RELATÓRIO DE ATENDIMENTO DE OCORRÊNCIA</h2>
 
-  <label>1 - NÚMERO: <input type="text" name="numero" style="width: 70px;"> /2025</label>
+  <label style="text-align: center">1 - NÚMERO: <input type="text" name="numero" style="width: 70px;"> ANO: <input type="text" name="ano" style="width: 50px;"></label>
 
   <div class="linha-horizontal">
     <label>DATA: <input type="date" name="data"></label>
